add alt for img

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <button type="submit">Launch</button>
           </div>
 
-          <img src="./assets/images/aliens.jpg" class="img" />
+          <img src="./assets/images/aliens.jpg" class="img"  alt="aliens"/>
         </div>
       </section>
 
       <section>
         <div class="facts">
-          <img src="./assets/images/stringTheory.jpg" class="facts-img" />
+          <img src="./assets/images/stringTheory.jpg" class="facts-img" alt="String Theory"/>
           <div class="fact-block">
             <ul class="max-content">
               <li class="fact">
@@ -103,7 +103,7 @@
             </ul>
             <button class="btn">More info</button>
           </div>
-          <img src="./assets/images/stringTheory.jpg" class="facts-img" />
+          <img src="./assets/images/stringTheory.jpg" class="facts-img" alt="String Theory" />
         </div>
       </section>
 
