--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header-content">
           <div class="logo-header">
-            <img src="./assets/icons/martian.svg" alt="Martian" class="martian"/>
+            <img
+              src="./assets/icons/martian.svg"
+              alt="Martian"
+              class="martian"
+            />
             <h1 class="logo">Cosmic Explorers</h1>
           </div>
           <nav class="nav">
@@ -52,13 +52,17 @@
             <button type="submit">Launch</button>
           </div>
 
-          <img src="./assets/images/aliens.jpg" class="img"  alt="aliens"/>
+          <img src="./assets/images/aliens.jpg" class="img" alt="aliens" />
         </div>
       </section>
 
       <section>
         <div class="facts">
-          <img src="./assets/images/stringTheory.jpg" class="facts-img" alt="String Theory"/>
+          <img
+            src="./assets/images/stringTheory.jpg"
+            class="facts-img"
+            alt="String Theory"
+          />
           <div class="fact-block">
             <ul class="max-content">
               <li class="fact">
@@ -103,7 +107,11 @@
             </ul>
             <button class="btn">More info</button>
           </div>
-          <img src="./assets/images/stringTheory.jpg" class="facts-img" alt="String Theory" />
+          <img
+            src="./assets/images/stringTheory.jpg"
+            class="facts-img"
+            alt="String Theory"
+          />
         </div>
       </section>
 
